@@ -5,6 +5,7 @@
 	- remove duplicate video modes (#145749)
 	- menu bar fits menu text width
 	- made 'Text Mode' translatable (#179582)
+	- workaround for interlaced mode issue on some ATI cards (#177982)
 
 9/6/2006:	v3.2.30
 	- translations updated
